# MingPlayer

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/cn/luozhanming/mingplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/cn/luozhanming/mingplayer/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/cn/luozhanming/mingplayer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
player/: CMakeLists.txt  build.gradle
player/src/androidTest/java/cn/luozhanming/player/: ExampleInstrumentedTest.kt
player/src/main/: AndroidManifest.xml
player/src/main/java/: MingPlayer.kt
player/src/main/java/cn/luozhanming/player/: MingPlayer.kt
player/src/main/jni/: native_lib.cpp
player/src/main/jni/include/: utils.h
player/src/main/jni/include/ffmpeg/libffmpeg/: config.h
player/src/main/jni/player/: AVSynchronizer.cpp  AVSynchronizer.h  AudioDecoder.cpp  AudioDecoder.h  JniCallbackHelper.cpp  JniCallbackHelper.h  MingPlayer.cpp  MingPlayer.h  SafeQueue.cpp  SafeQueue.h  VideoDecoder.cpp  VideoDecoder.h  utils.h
player/src/test/java/cn/luozhanming/player/: ExampleUnitTest.kt
